Fixes right alignment of code tree search buttons.

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -3408,6 +3408,8 @@ button#tree-back-button:disabled, button#tree-forward-button:disabled {
 }
 
 button#tree-forward-button {
+	position: absolute;
+	right: 0;
 	padding: 0 !important;
 	margin-right: 0;
 }
